test/files/neg/t5687.check
t5687.scala:4: error: type arguments [T] do not conform to class Template's type parameter bounds [T <: AnyRef]
  type Repr[T]<:Template[T]
                ^
t5687.scala:20: error: overriding type Repr[T] <: Template[T] (defined in class Template);
 type Repr = CurveTemplate[T] has incompatible type
  type Repr = CurveTemplate[T]
       ^
two errors found
